# unicode-zawgyi-converter

./: .spin  README.md  converted_zg.txt  dune  dune-project  unicode-zawgyi-converter.opam
.github/workflows/: ci.yml
lib/: converter.ml  converter.mli  dune
samples/: u.txt  unicode_text.rtf  z.txt  zawgyi_text.rtf
test/: converter_tests.ml  dune
test/support/: test_runner.ml
