(library
 (name unicode_zawgyi_converter_test)
 (libraries alcotest unicode-zawgyi-converter)
 (modules
  (:standard \ test_runner))
 (flags (:standard -linkall -g -open StdLabels)))

(executable
 (name test_runner)
 (libraries alcotest unicode_zawgyi_converter_test)
 (modules test_runner)
 (flags (:standard -open StdLabels)))

(rule
 (alias runtest)
 (action
  (run ./test_runner.exe -q --color=always)))

(include_subdirs unqualified)
